Bug 398877 - [Recent Documents/Open Recent] bug with Templates
Summary: [Recent Documents/Open Recent] bug with Templates
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Eoin O'Neill
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-09-20 15:36 UTC by David REVOY
Modified: 2018-10-11 08:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David REVOY 2018-09-20 15:36:45 UTC
Hi!
On the new Krita greating background, in the column "Recent Documents" I can see the Krita template I'm using and edit the template directly from here. I can also reproduce with File > Open Recent. 

How to reproduce:
=================
1. Open Krita.
2. Create a new document from a template (eg. Comic template)
3. Close document without saving.

Result:
=======
In the background of the app, or in File > Open Recent you'll see BD-EuroTemplate.kra file or Comics-USTemplate.kra listed. If you click again on this file all edition done will overwrite the source template directly (it can even trigger permission issue if the template is installed in a protected system path like /usr/share/krita/krita/templates/comics/.source/ )

Expected:
=========
Exclude the Template files from the 'Recent' list; the template files themselves are never what I want to edit or is working on via this menu. I report this bug because you can guess I accidentally overwritten one of my precious template this way, that's why I report it as a bug. (no worry, I had a backup).
Comment 1 Halla Rempt 2018-09-20 15:39:33 UTC
I've seen this happen, but only from the corner of my eye when I was investigating another bug, so confirmed.
Comment 2 Eoin O'Neill 2018-10-10 09:39:07 UTC
Git commit cf6a4209b832595fec51844d7bdaaab80b10fb94 by Eoin O'Neill.
Committed on 10/10/2018 at 09:38.
Pushed by eoinoneill into branch 'master'.

Template Files No Longer Added to 'Recent Documents' List on the Krita Greeting Page

This is a fix intended to prevent any unintentional edits to Krita's template files.

M  +8    -0    libs/ui/KisMainWindow.cpp

https://commits.kde.org/krita/cf6a4209b832595fec51844d7bdaaab80b10fb94
Comment 3 Halla Rempt 2018-10-11 08:23:19 UTC
Git commit 371ea66850c8ad64d25ba13b322fef8a6a8b4d1c by Boudewijn Rempt, on behalf of Eoin O'Neill.
Committed on 11/10/2018 at 07:52.
Pushed by rempt into branch 'krita/4.1'.

Template Files No Longer Added to 'Recent Documents' List on the Krita Greeting Page

This is a fix intended to prevent any unintentional edits to Krita's template files.

(cherry picked from commit cf6a4209b832595fec51844d7bdaaab80b10fb94)

M  +8    -0    libs/ui/KisMainWindow.cpp

https://commits.kde.org/krita/371ea66850c8ad64d25ba13b322fef8a6a8b4d1c