Template Files No Longer Added to 'Recent Documents' List on the Krita Greeting Page

This is a fix intended to prevent any unintentional edits to Krita's template files.
BUG: 398877

(cherry picked from commit cf6a4209b832595fec51844d7bdaaab80b10fb94)